--- a/index.html
+++ b/index.html
@@ -9,6 +9,46 @@
 </head>
 
 <body>
+    <section id="produk">
+        <div class="row">
+        <div class="produk-kiri">
+
+        </div>
+        <div class="produk-kanan">
+            <div class="row">
+                <div class="card">
+                        <h5>Waffle Cake</h5>
+                        <img src="assets/produk1.png" alt="">
+                </div>
+                <div class="card">
+                        <h5>Waffle Cake</h5>
+                        <img src="assets/produk5.png" alt="">
+                </div>
+                <div class="card">
+                        <h5>Waffle Cake</h5>
+                        <img src="assets/produk3.png" alt="">
+                </div>
+            </div>
+            <div class="row">
+                <div class="card">
+                        <h5>Waffle Cake</h5>
+                        <img src="assets/produk4.png" alt="">
+                </div>
+                <div class="card">
+                        <h5>Waffle Cake</h5>
+                        <img src="assets/produk5.png" alt="">
+                </div>
+                <div class="card">
+                        <h5>Waffle Cake</h5>
+                        <img src="assets/produk6.png" alt="">
+                </div>
+            </div>
+            <div class="row-button">
+                <button>Cek Menu</button>
+            </div>
+        </div>
+    </section>
+
     
     <script src="js/script.js"></script>
 </body>
