--- a/index.html
+++ b/index.html
@@ -10,6 +10,28 @@
 
 <body>
     
+    <section id="head-sec">
+        <div class="bg_awal">
+            <img src="assets/bgawal.png" alt="bg awal">
+        </div>
+        <div class="text_head">
+            <!-- <h1>Enak</h1> -->
+            <img src="assets/Group 3@2x.png" alt="bg awal">
+            <div class="desk_head">
+                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. 
+                    It has roots in a piece of classical Latin literature from 45 BC, 
+                    making it over 2000 years old. Richard McClintock, a Latin professor at 
+                    Hampden-Sydney College in Virginia, looked up one of the more obscure.</p>
+            </div>
+
+            <div class="btn_pesan">
+                <button>PESAN SEKARANG</button>
+            </div>
+        </div>
+        
+    </section>
+
+
     <script src="js/script.js"></script>
 </body>
 </html>
