--- a/index.html
+++ b/index.html
@@ -14,149 +14,40 @@
 </head>
 
 <body>
-
-    <!-- anas -->
-    <section id="head-sec">
-        <div class="bg_awal">
-            <img src="assets/bgawal.png" alt="bg awal">
-        </div>
-        <div class="text_head">
-            <!-- <h1>Enak</h1> -->
-            <img src="assets/Group 3@2x.png" alt="bg awal">
-            <div class="desk_head">
-                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. 
-                    It has roots in a piece of classical Latin literature from 45 BC, 
-                    making it over 2000 years old. Richard McClintock, a Latin professor at 
-                    Hampden-Sydney College in Virginia, looked up one of the more obscure.</p>
-            </div>
-
-            <div class="btn_pesan">
-                <button>PESAN SEKARANG</button>
-            </div>
-        </div>
-        
-    </section>
-
-    <!--ilham-->
-        <section id="produk">
-        <div class="row">
-        <div class="produk-kiri">
-
-        </div>
-        <div class="produk-kanan">
-            <div class="row">
-                <div class="card">
-                        <h5>Waffle Cake</h5>
-                        <img src="assets/produk1.png" alt="">
-                </div>
-                <div class="card">
-                        <h5>Waffle Cake</h5>
-                        <img src="assets/produk5.png" alt="">
-                </div>
-                <div class="card">
-                        <h5>Waffle Cake</h5>
-                        <img src="assets/produk3.png" alt="">
-                </div>
-            </div>
-            <div class="row">
-                <div class="card">
-                        <h5>Waffle Cake</h5>
-                        <img src="assets/produk4.png" alt="">
-                </div>
-                <div class="card">
-                        <h5>Waffle Cake</h5>
-                        <img src="assets/produk5.png" alt="">
-                </div>
-                <div class="card">
-                        <h5>Waffle Cake</h5>
-                        <img src="assets/produk6.png" alt="">
-                </div>
-            </div>
-            <div class="row-button">
-                <button>Cek Menu</button>
-            </div>
-        </div>
-    </section>
-    <!-- bem -->
-    <!-- promo -->
-    <section class="promo">
-        <!-- <div class="imgbg">
-            <img src="assets/paster.png" alt="">
-        </div> -->
-        <div class="imgcontent">
-            <img src="assets/buy1.png" alt="">
-        </div>
+    <!--ini bem2.0  -->
+    <!-- sec promo -->
+    <section id="promo-bem" class="vh-100">
+        <div class="text-center">
+            <img src="/assets/buy1.png" class="imgpromo-bem w-50 position-absolute top-50 start-50 translate-middle" alt="...">
+          </div>
     </section>
     <!-- end promo -->
 
-    <!-- hadi -->
-    <div class="wrapper-benefit">
-        <div class="benefit">
-            <div class="row">
-                <h1 class="heading-title">DIKIRIM MASIH HANGAT</h1>
-            </div>
-
-            <div class="row">
-                <div class="col">
-                    <img src="./assets/pc.png" class="image">
-                    <h3 class="title">ORDER ONLINE</h3>
-                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, illum, sunt minima incidunt dignissimos</p>
-                </div>
-
-                <div class="col">
-                    <img src="./assets/food.png" class="image">
-                    <h3 class="title">BARU DIMASAK</h3>
-                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, illum, sunt minima incidunt dignissimos</p>
-                </div>
-
-                <div class="col">
-                    <img src="./assets/arrow.png" class="image">
-                    <h3 class="title">BEBAS ONGKIR</h3>
-                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, illum, sunt minima incidunt dignissimos</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="wrapper-footer">
-        <div class="footer">
-            <div class="row">
-                <div class="col">
-                    <div class="title">
-                        <h1>PESAN SEKARANG JUGA</h1>
-                    </div>
-                    <div class="content">
-                        <h3>021(8756178245)</h3>
-                        <a href="" class="btn pesan">PESAN SEKARANG</a>
-                        <a href="" class="btn booking">BOOKING MEJA</a>
-                    </div>
-                </div>
-            </div>     
-        </div>
-    </div>
-    <!-- end of hadi -->
-
-    <!-- bem -->
-    <!-- kurir -->
-    <footer class="kurir">
-        <div class="container">
-            <div class="kontak">
+    <!-- footer -->
+    <footer id="footer-bem" class="p-xl-5">
+        <div class="ml-bem container d-flex justify-content-around text-light">
+            <div class="content-bem pt-5 w-75">
                 <p>KONTAK</p>
-                <p class="orange"> 021(8756178245)</p>
-                <p>sosial</p>
+                <p style="color: #F16D08;">021(8756178245)</p>
+                <div class="sosial-bem d-flex">
+                    <a href=""><img src="assets/fb.png" alt="" ></a> 
+                    <a href=""><img src="assets/twtr.png" alt=""></a>
+                    <a href=""><img src="assets/ig.png" alt=""></a>
+                </div>
             </div>
-            <div class="info">
-                <p>OPENING HOURS
-                    Setiap Hari, 11am – 11pm
-                    jagatresto@email.com</p>
+            <div class="content-bem pt-5 w-50">
+                <p>OPENING HOURS</p>
+                <p>Setiap Hari, 11am – 11pm</p>
+                <p>jagatresto@email.com</p>
             </div>
-            <div class="peta">
-                <img src="assets/google8sah.png" alt="" width="150px" height="50px" >
+            <div class="content-bem pt-5">
+                <img src="assets/maps.png" class="rounded mx-auto d-block w-50" alt="...">
             </div>
         </div>
-
     </footer>
-    <!-- end kurir -->
+    <!-- end footer -->
+
+    <!-- end bem 2.0 -->
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
