Fix row to width 100

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- Hadi HTML -->
     <div class="container-fluid benefit">
-        <div class="row d-flex justify-content-center">
+        <div class="row d-flex justify-content-center w-100">
             <div class="col-md-10">
                 <div class="row d-flex flex-column">
                     <div class="col">
@@ -55,7 +55,7 @@
 
     <!-- Hadi HTML -->
     <div class="container-fluid footer">
-        <div class="row d-flex flex-column align-items-center">
+        <div class="row d-flex flex-column align-items-center w-100">
             <div class="col-md-12 col-sm-10">
                 <h1>PESAN SEKARANG JUGA</h1>
                 <h3>021(8756178245)</h3>
