--- a/index.html
+++ b/index.html
@@ -5,154 +5,85 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jagat Resto</title>
-    <link rel="stylesheet" href="css/style.css" />
+
+    <!--My Style-->
+    <link rel="stylesheet" href="css/ilham.css" />
+    <!--Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
 </head>
 
 <body>
-
-    <!-- anas -->
-    <section id="head-sec">
-        <div class="bg_awal">
-            <img src="assets/bgawal.png" alt="bg awal">
-        </div>
-        <div class="text_head">
-            <!-- <h1>Enak</h1> -->
-            <img src="assets/Group 3@2x.png" alt="bg awal">
-            <div class="desk_head">
-                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. 
-                    It has roots in a piece of classical Latin literature from 45 BC, 
-                    making it over 2000 years old. Richard McClintock, a Latin professor at 
-                    Hampden-Sydney College in Virginia, looked up one of the more obscure.</p>
-            </div>
-
-            <div class="btn_pesan">
-                <button>PESAN SEKARANG</button>
-            </div>
-        </div>
-        
-    </section>
-
     <!--ilham-->
-        <section id="produk">
-        <div class="row">
-        <div class="produk-kiri">
-
-        </div>
-        <div class="produk-kanan">
-            <div class="row">
-                <div class="card">
-                        <h5>Waffle Cake</h5>
-                        <img src="assets/produk1.png" alt="">
-                </div>
-                <div class="card">
-                        <h5>Waffle Cake</h5>
-                        <img src="assets/produk5.png" alt="">
-                </div>
-                <div class="card">
-                        <h5>Waffle Cake</h5>
-                        <img src="assets/produk3.png" alt="">
-                </div>
-            </div>
-            <div class="row">
-                <div class="card">
-                        <h5>Waffle Cake</h5>
-                        <img src="assets/produk4.png" alt="">
-                </div>
-                <div class="card">
-                        <h5>Waffle Cake</h5>
-                        <img src="assets/produk5.png" alt="">
-                </div>
-                <div class="card">
-                        <h5>Waffle Cake</h5>
-                        <img src="assets/produk6.png" alt="">
-                </div>
-            </div>
-            <div class="row-button">
-                <button>Cek Menu</button>
-            </div>
-        </div>
-    </section>
-    <!-- bem -->
-    <!-- promo -->
-    <section class="promo">
-        <!-- <div class="imgbg">
-            <img src="assets/paster.png" alt="">
-        </div> -->
-        <div class="imgcontent">
-            <img src="assets/buy1.png" alt="">
-        </div>
-    </section>
-    <!-- end promo -->
-
-    <!-- hadi -->
-    <div class="wrapper-benefit">
-        <div class="benefit">
-            <div class="row">
-                <h1 class="heading-title">DIKIRIM MASIH HANGAT</h1>
-            </div>
-
-            <div class="row">
-                <div class="col">
-                    <img src="./assets/pc.png" class="image">
-                    <h3 class="title">ORDER ONLINE</h3>
-                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, illum, sunt minima incidunt dignissimos</p>
-                </div>
-
-                <div class="col">
-                    <img src="./assets/food.png" class="image">
-                    <h3 class="title">BARU DIMASAK</h3>
-                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, illum, sunt minima incidunt dignissimos</p>
-                </div>
-
-                <div class="col">
-                    <img src="./assets/arrow.png" class="image">
-                    <h3 class="title">BEBAS ONGKIR</h3>
-                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, illum, sunt minima incidunt dignissimos</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="wrapper-footer">
-        <div class="footer">
-            <div class="row">
-                <div class="col">
-                    <div class="title">
-                        <h1>PESAN SEKARANG JUGA</h1>
-                    </div>
-                    <div class="content">
-                        <h3>021(8756178245)</h3>
-                        <a href="" class="btn pesan">PESAN SEKARANG</a>
-                        <a href="" class="btn booking">BOOKING MEJA</a>
+        <section class="produk">
+                <div class="container d-flex justify-content-end align-items-end ">
+                    <div class="row mt-5 ">
+                            <div class="col-4">
+                                <div class="card  border border-0" style="width: 10rem;">
+                                    <div class="card-body">
+                                        <p class="card-text text-center text-white">SALAD</p>
+                                    </div>
+                                    <img src="assets/produk5.png" class="card-img-top" alt="...">
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="card  border border-0" style="width: 10rem;">
+                                    <div class="card-body">
+                                        <p class="card-text text-center text-white">POTATO FRIED</p>
+                                    </div>
+                                    <img src="assets/produk6.png" class="card-img-top" alt="...">
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="card  border border-0" style="width: 10rem;">
+                                    <div class="card-body">
+                                        <p class="card-text text-center text-white">PANCAKE</p>
+                                    </div>
+                                    <img src="assets/produk1.png" class="card-img-top" alt="...">
+                                </div>
+                            </div>
                     </div>
                 </div>
-            </div>     
-        </div>
-    </div>
-    <!-- end of hadi -->
-
-    <!-- bem -->
-    <!-- kurir -->
-    <footer class="kurir">
-        <div class="container">
-            <div class="kontak">
-                <p>KONTAK</p>
-                <p class="orange"> 021(8756178245)</p>
-                <p>sosial</p>
-            </div>
-            <div class="info">
-                <p>OPENING HOURS
-                    Setiap Hari, 11am – 11pm
-                    jagatresto@email.com</p>
-            </div>
-            <div class="peta">
-                <img src="assets/google8sah.png" alt="" width="150px" height="50px" >
-            </div>
-        </div>
-
-    </footer>
-    <!-- end kurir -->
-    
+                <div class="container d-flex justify-content-end align-items-end mt-4">
+                    <div class="row">
+                            <div class="col-4">
+                                <div class="card  border border-0" style="width: 10rem;">
+                                    <div class="card-body ">
+                                        <p class="card-text text-center text-white">WAFFLE</p>
+                                    </div>
+                                    <img src="assets/produk3.png" class="card-img-top height-25" alt="...">
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="card  border border-0" style="width: 10rem;">
+                                    <div class="card-body">
+                                        <p class="card-text text-center text-white">STEAK</p>
+                                    </div>
+                                    <img src="assets/produk4.png" class="card-img-top" alt="...">
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="card  border border-0" style="width: 10rem;">
+                                    <div class="card-body">
+                                        <p class="card-text text-center text-white">CAKE</p>
+                                    </div>
+                                    <img src="assets/produk5.png" class="card-img-top" alt="...">
+                                </div>
+                            </div>
+                    </div>
+                </div>   
+                <div class="container d-flex justify-content-end align-items-end mt-4">
+                    <div class="row">
+                        <div class="col-12">
+                        <button class="btn-menu">CEK MENU</button>
+                        </div>
+                    </div>
+                </div>     
+        </section>
+ 
+    <!--My Js-->
     <script src="js/script.js"></script>
+    <!--Bootstrap Js-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
