--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <!-- sec promo -->
     <section id="promo-bem" class="vh-100">
         <div class="text-center">
-            <img src="/assets/buy1.png" class="imgpromo-bem w-50 bem-position translate-middle" alt="...">
+            <img src="/assets/buy1.png" class="imgpromo-bem w-50 " alt="...">
           </div>
     </section>
     
